--- a/Stata/Stata_install/Stata_install.rmd
+++ b/Stata/Stata_install/Stata_install.rmd
@@ -1,1 +1,75 @@
 
+```{r, echo=FALSE, results=FALSE, eval=TRUE}
+require(knitr)
+knitr::opts_chunk$set(eval=FALSE, results=FALSE, message=FALSE, warning=FALSE, error=FALSE)
+statapath <- "/Applications/Stata/StataMP.app/Contents/MacOS/stata-mp"
+opts_chunk$set(engine="stata", engine.path=statapath, comment="")
+```
+
+
+# Stata Installation
+
+<div class="alert alert-info">
+  **Your professional conduct is greatly appreciated. Out of respect to your fellow workshop attendees and instructors, please arrive at your workshop on time, having pre-installed all necessary software and materials. This will likely take 10-15 minutes.**
+</div>
+
+
+
+**If you are from Harvard FAS:**
+
+You have access to the licensed Stata program. Go to the software download page: https://downloads.fas.harvard.edu/download, log in your Harvard key, and download Stata MP from there. 
+
+
+
+**If you are from MIT or other Harvard schools:**
+
+* You want to first check with your school or department whether they provide you free access to Stata SE or Stata MP. 
+* If not, you can download the program from Stata Corporation with an annual license fee of close to $300. Their website is https://www.stata.com/ 
+* Stata version MP is faster than SE when working with large datasets. However, in this workshop, it doesn't matter which version you use, since we will not be performing computational intensive jobs. 
+
+<div class="alert alert-success">
+After you successfully installed Stata, you should be able to open the program with the following start page: 
+</div>
+
+![](C:/Users/Yihan/.git/dss-workshops/Stata/Stata_install\images/Stata_start_panel.png)
+
+
+## Troubleshooting session
+
+We will hold a troubleshooting session during the 20 minutes prior to the start of the workshop. 
+**If you are unable to download Stata SE or MP, please stop by the training room during this session.**
+Once the workshop starts we will **NOT** be able to give you one-to-one assistance with troubleshooting installation problems. Likewise, if you arrive late, please do **NOT** expect one-to-one assistance for anything covered at the beginning of the workshop.
+
+
+## Materials
+
+Download class materials for your workshop:
+
+* Stata Introduction: <https://github.com/IQSS/dss-workshops/raw/master/Stata/StataIntro.zip>
+* Stata Data Management: <https://github.com/IQSS/dss-workshops/raw/master/Stata/StataDatMan.zip>
+* Stata Modeling: <https://github.com/IQSS/dss-workshops/raw/master/Stata/StataMod.zip>
+* Stata Graphics: <https://github.com/IQSS/dss-workshops/raw/master/Stata/StataGraph.zip>
+
+
+Extract materials from the zipped directory (Right-click -> Extract All on Windows, double-click on Mac) and move them to your desktop. 
+
+It will be useful when you view the above materials for you to see the different file extensions on your computer. Here are instructions for enabling this:
+
+* [Mac OS](https://support.apple.com/guide/mac-help/show-or-hide-filename-extensions-on-mac-mchlp2304/mac)
+* [Windows OS](http://kb.winzip.com/kb/entry/26/)
+
+
+
+
+## Resources
+
+* IQSS 
+    + Workshops: <https://dss.iq.harvard.edu/workshop-materials>
+    + Data Science Services: <https://dss.iq.harvard.edu/>
+    + Research Computing Environment: <https://iqss.github.io/dss-rce/>
+
+* HBS
+    + Research Computing Services workshops: <https://training.rcs.hbs.org/workshops>
+    + Other HBS RCS resources: <https://training.rcs.hbs.org/workshop-materials>
+    + RCS consulting email: <mailto:research@hbs.edu>
+    
