--- a/Stata/StataGraph/StataGraph.rmd
+++ b/Stata/StataGraph/StataGraph.rmd
@@ -1,1 +1,427 @@
 
+```{r, echo=FALSE, results=FALSE, eval=TRUE}
+require(knitr)
+knitr::opts_chunk$set(eval=FALSE, results=FALSE, message=FALSE, warning=FALSE, error=FALSE)
+statapath <- "/Applications/Stata/StataMP.app/Contents/MacOS/stata-mp"
+opts_chunk$set(engine="stata", engine.path=statapath, comment="")
+```
+
+# Stata Modeling & Graphing
+
+**Topics**
+
+* Stata modeling
+    + Simple regression
+    + Multiple regression
+    + Interactions
+    + Exporting regression tables
+    + Testing model assumptions
+* Stata graphing
+    + Univariate graphs
+    + Bivariate graphs
+
+
+## Setup
+
+### Software & Materials
+
+Laptop users: you will need a copy of Stata installed on your machine. 
+Harvard FAS affiliates can install a licensed version from <http://downloads.fas.harvard.edu/download>
+
+* Download class materials at <https://github.com/IQSS/dss-workshops/raw/master/Stata/StataModGraph.zip>
+* Extract materials from the zipped directory `StataMod.zip` (Right-click => Extract All on Windows, double-click on Mac) and move them to your desktop!
+
+### Organization
+
+* Please feel free to ask questions at any point if they are relevant to the current topic (or if you are lost!)
+* Collaboration is encouraged - please introduce yourself to your neighbors!
+* If you are using a laptop, you will need to adjust file paths accordingly
+* Make comments in your Do-file - save on flash drive or email to yourself
+
+### Goals
+
+* This is an introduction to modeling and visualization in Stata
+* Assumes basic knowledge of Stata
+* Not appropriate for people already familiar with Stata
+* If you are catching on before the rest of the class, experiment with command features described in help files
+* Learning Objectives:
+    + Fit models in Stata
+    + Test modeling assumptions
+    + Plot basic graphs in Stata
+    + Plot two-way graphs
+
+
+## Fitting models
+
+### Today's Dataset
+
+* We have data on a variety of variables for all 50 states
+* Population, density, energy use, voting tendencies, graduation rates, income, etc.
+* We're going to be predicting SAT scores
+* Univariate Regression: SAT scores and Education Expenditures
+* Does the amount of money spent on education affect the mean SAT score in a state?
+* Dependent variable: csat
+* Independent variable: expense
+
+### Opening Files
+
+* Look at bottom left hand corner of Stata screen
+    + This is the directory Stata is currently reading from
+* Files are located in the StataStatistics folder on the Desktop
+* Start by telling Stata where to look for these
+
+```{stata}
+  // change directory
+  cd "~/Desktop/Stata/StataStatGraph"
+```
+
+
+
+
+## Graphing in Stata
+
+### Graphing Strategies
+
+* Keep it simple
+* Labels, labels, labels!!
+* Avoid cluttered graphs
+* Every part of the graph should be meaningful
+* Avoid:
+    + Shading
+    + Distracting colors
+    + Decoration
+* Always know what you’re working with before you get started
+    + Recognize scale of data
+    + If you’re using multiple variables – how do their scales align?
+* Before any graphing procedure review variables with `codebook`, `sum`, `tab`, etc.
+* HELPFUL STATA HINT: If you want your command to go on multiple lines use `///` at end of each line
+
+### Terrible Graph
+
+![](Stata/StataModGraph/images/Terrible.png)
+
+### Much Better Graph
+
+![](Stata/StataModGraph/images/Good.png)
+
+
+## Univariate Graphics
+
+### Our First Dataset
+
+* Time Magazine Public School Poll
+    + Based on survey of 1,000 adults in U.S.
+    + Conducted in August 2010
+    + Questions regarding feelings about parental involvement, teachers union, current potential for reform
+* Open Stata and call up the datafile for today
+
+```{stata}
+  // Step 1: tell Stata where to find data:
+  cd "~/StataGraphics/dataSets"
+  // Step 2: call up our dataset:
+  use TimePollPubSchools.dta
+```
+
+### Single Continuous Variables
+
+**Example: Histograms**
+
+* Stata assumes you’re working with continuous data
+* Very simple syntax:
+    + `hist varname`
+* Put a comma after your varname and start adding options
+    + `bin(#)` : change the number of bars that the graph displays
+    + `normal` : overlay normal curve
+    + `addlabels` : add actual values to bars
+
+**Histogram Options**
+
+* To change the numeric depiction of your data add these options after the comma
+    + Choose one: density fraction frequency percent
+* Be sure to properly describe your histogram:
+    + `title(insert name of graph)`
+    + `subtitle(insert subtitle of graph)`
+    + `note(insert note to appear at bottom of graph)`
+    + `caption(insert caption to appear below notes)`
+
+**Histogram Example**
+
+```{stata}
+  hist F1, bin(10) percent title(TITLE) ///
+    subtitle(SUBTITLE) caption(CAPTION) note(NOTES)
+```
+
+![](Stata/StataModGraph/images/hist1.png)
+
+**Axis Titles & Labels**
+
+* Axis title options (default is variable label):
+    + `xtitle(insert x axis name)`
+    + `ytitle(insert y axis name)`
+* Don’t want axis titles?
+    + `xtitle("")`
+    + `ytitle("")`
+* Add labels to X or Y axis:
+    + xlabel(insert x axis label)
+    + ylabel(insert y axis label)
+* Tell Stata how to scale each axis
+    + xlabel(start\#(increment)end\#)
+    + xlabel(0(5)100)
+* This would label x-axis from 0-100 in increments of 5
+
+**Axis Labels Example** 
+
+```{stata}
+  hist F1, bin(10) percent title(TITLE) subtitle(SUBTITLE) ///
+      caption(CAPTION) note(NOTES) ///
+      xtitle(Here's your x-axis title) ///
+  ytitle(here's your y-axis title)
+```
+
+![](Stata/StataModGraph/images/hist2.png)
+
+### Single Categorical Variables
+
+* We can also use the `hist` command for bar graphs
+    + Simply specify "discrete" with options
+* Stata will produce one bar for each level (i.e. category) of variable
+* Use `xlabel` command to insert names of individual categories
+
+```{stata}
+  hist F4, title(Racial breakdown of Time Poll Sample) xtitle(Race) ///
+  ytitle(Percent) xlabel(1 "White" 2 "Black" 3 "Asian" 4 "Hispanic" ///
+   5 "Other") discrete percent addlabels
+```
+
+![](Stata/StataModGraph/images/bargraph.png)
+
+### Exercise 2
+
+**Histograms Bar Graphs**
+
+1.  Open the datafile, NatNeighCrimeStudy.dta.
+2.  Create a histogram of the tract-level poverty rate (variable name: `T_POVRTY`).
+3.  Insert the normal curve over the histogram
+4.  Change the numeric representation on the Y-axis to "percent"
+5.  Add appropriate titles to the overall graph and the x axis and y axis. Also, add a note that states the source of this data.
+6.  Open the datafile, TimePollPubSchools.dta
+7.  Create a histogram of the question, "What grade would you give your child’s school" (variable name: Q11). Be sure to tell Stata that this is a categorical variable.
+8.  Format this graph so that the axes have proper titles and labels. Also, add an appropriate title to the overall graph that goes onto two lines. Add a note stating the source of the data.
+
+
+## Bivariate Graphics
+
+### Next Dataset:
+
+* National Neighborhood Crime Study (NNCS)
+    + N=9,593 census tracts in 2000
+    + Explore sources of variation in crime for communities in the United States
+    + Tract-level data: crime, social disorganization, disadvantage, socioeconomic inequality
+    + City-level data: labor market, socioeconomic inequality, population change
+
+### The Twoway Family
+
+* `twoway` is basic Stata command for all twoway graphs
+* Use `twoway` anytime you want to make comparisons among variables
+* Can be used to combine graphs (i.e., overlay one graph with another
+    + e.g., insert line of best fit over a scatter plot
+* Some basic examples:
+
+```{stata}
+  use NatNeighCrimeStudy.dta
+  twoway scatter T_PERCAP T_VIOLNT
+  twoway dropline T_PERCAP T_VIOLNT
+  twoway  lfitci T_PERCAP T_VIOLNT
+```
+
+**Twoway & the `by` Statement**
+
+```{stata}
+  twoway scatter T_PERCAP T_VIOLNT, by(DIVISION)
+```
+
+![](Stata/StataModGraph/images/twowayby.png)
+
+**Twoway Title Options**
+
+* Same title options as with histogram
+    + `title(insert name of graph)`
+    + `subtitle(insert subtitle of graph)`
+    + `note(insert note to appear at bottom of graph)`
+    + `caption(insert caption to appear below notes)`
+
+**Twoway Title Options Example**
+
+```{stata}
+  twoway scatter T_PERCAP T_VIOLNT, ///
+      title(Comparison of Per Capita Income ///
+            and Violent Crime Rate at Tract level) ///
+  xtitle(Violent Crime Rate) ytitle(Per Capita Income) ///
+      note(Source: National Neighborhood Crime Study 2000) 
+```
+
+* The title is a bit cramped--let's fix that:
+
+```{stata}
+  twoway scatter T_PERCAP T_VIOLNT, ///
+      title("Comparison of Per Capita Income" ///
+  "and Violent Crime Rate at Tract level") ///
+  xtitle(Violent Crime Rate) ytitle(Per Capita Income) ///
+  note(Source: National Neighborhood Crime Study 2000) 
+```
+
+**Twoway Symbol Options**
+
+* A variety of symbol shapes are available: use `palette symbolpalette` to seem them and `msymbol()` to set them
+
+![](Stata/StataModGraph/images/Symbol.png)
+
+**Twoway Symbol Options**
+
+```{stata}
+  twoway scatter T_PERCAP T_VIOLNT, ///
+      title("Comparison of Per Capita Income" ///
+  "and Violent Crime Rate at Tract level") ///
+  xtitle(Violent Crime Rate) ytitle(Per Capita Income) ///
+  note(Source: National Neighborhood Crime Study 2000) ///
+  msymbol(Sh) mcolor("red")
+```
+
+![](Stata/StataModGraph/images/msymbol_mcolor.png)
+
+### Overlaying Twoway Graphs
+
+* Very simple to combine multiple graphs…just put each graph command in parentheses
+    + `twoway (scatter var1 var2) (lfit var1 var2)`
+* Add individual options to each graph within the parentheses
+* Add overall graph options as usual following the comma
+    + `twoway (scatter var1 var2) (lfit var1 var2), options`
+
+**Overlaying Points & Lines**
+
+```{stata}
+  twoway (scatter T_PERCAP T_VIOLNT) ///
+      (lfit T_PERCAP T_VIOLNT), ///
+      title("Comparison of Per Capita Income" ///
+            "and Violent Crime Rate at Tract level") ///
+      xtitle(Violent Crime Rate) ytitle(Per Capita Income) ///
+      note(Source: National  Neighborhood Crime Study 2000)
+```
+
+**Overlaying Points & Labels**
+
+```{stata}
+  twoway (scatter T_PERCAP T_VIOLNT if T_VIOLNT==1976, ///
+          mlabel(CITY)) (scatter T_PERCAP T_VIOLNT), ///
+      title("Comparison of Per Capita Income" ///
+            "and Violent Crime Rate at Tract level") ///
+      xlabel(0(200)2400) note(Source: National Neighborhood ///
+                              Crime Study 2000) legend(off)
+```
+
+### Exercise 3
+
+**The TwoWay Family**
+
+Open the datafile, NatNeighCrimeStudy.dta.
+
+1.  Create a basic twoway scatterplot that compares the city unemployment rate (`C_UNEMP`) to the percent secondary sector low-wage jobs (`C_SSLOW`)
+2.  Generate the same scatterplot, but this time, divide the plot by the dummy variable indicating whether the city is located in the south or not (`C_SOUTH`)
+3.  Change the color of the symbol that you use in this scatter plot
+4.  Change the type of symbol you use to a marker of your choice
+5.  Notice in your scatterplot that is broken down by `C_SOUTH` that there is an outlier in the upper right hand corner of the "Not South" graph. Add the city name label to this marker.
+6.  Review the options available under "help twoway<sub>options</sub>" and change one aspect of your graph using an option that we haven’t already reviewed
+
+
+## Twoway Line Graphs
+
+* Line graphs helpful for a variety of data
+    + Especially any type of time series data
+* We’ll use data on US life expectancy from 1900-1999
+    + `webuse uslifeexp, clear`
+
+```{stata}
+  webuse uslifeexp, clear
+  twoway (line le_wm year, mcolor("red")) ///
+      (line le_bm year, mcolor("green"))
+```
+
+![](Stata/StataModGraph/images/lineGraph1.png)
+
+```{stata}
+  twoway (line (le_wfemale le_wmale le_bf le_bm) year, ///
+      lpattern(dot solid dot solid))
+```
+
+![](Stata/StataModGraph/images/linegraph2.png)
+
+**Stata Graphing Lines**
+
+```{stata}
+  palette linepalette
+```
+
+![](Stata/StataModGraph/images/linepalette.png)
+
+
+## Exporting Graphs
+
+* From Stata, right click on image and select "save as" or try syntax:
+    + `graph export myfig.esp, replace`
+* In Microsoft Word: insert -> picture -> from file
+    + Or, right click on graph in Stata and copy and paste into MS Word
+
+
+## Exercise Solutions
+
+### Ex 0: prototype
+```{stata}
+**
+```
+
+### Ex 1: prototype
+```{stata}
+**
+```
+
+### Ex 2: prototype
+```{stata}
+**
+```
+
+### Ex 3: prototype
+```{stata}
+**
+```
+
+
+## Wrap-up
+
+### Feedback
+
+These workshops are a work in progress, please provide any feedback to: help@iq.harvard.edu
+
+### Resources
+
+* IQSS 
+    + Workshops: <https://dss.iq.harvard.edu/workshop-materials>
+    + Data Science Services: <https://dss.iq.harvard.edu/>
+    + Research Computing Environment: <https://iqss.github.io/dss-rce/>
+
+* HBS
+    + Research Computing Services workshops: <https://training.rcs.hbs.org/workshops>
+    + Other HBS RCS resources: <https://training.rcs.hbs.org/workshop-materials>
+    + RCS consulting email: <mailto:research@hbs.edu>
+
+* Stata
+    + UCLA website: <http://www.ats.ucla.edu/stat/Stata/>
+    + Stata website: <http://www.stata.com/help.cgi?contents>
+    + Email list: <http://www.stata.com/statalist/>
+
+
+
+
+
+
+
+
